--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -11,6 +11,8 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
+  <script type="text/javascript" src="spec/jasmine-jquery.js"></script>
+
 
   <!-- include source files here... -->
   <script src="/assets/js/gopher.js"></script>
