move jasmine spec

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -16,7 +16,7 @@
 
   <!-- include source files here... -->
   <script src="/assets/js/gopher.js"></script>
-  <script type="text/javascript" src="/assets/js/gopherSpec.js"></script>
+  <script type="text/javascript" src="gopherSpec.js"></script>
 
 
 
